--- a/lec003/test/Makefile
+++ b/lec003/test/Makefile
@@ -8,9 +8,9 @@
 # -lpthreadをつけることにも注意。
 # makeかmake allしたらビルドして実行まで行います。
 all:
-			gcc -c ../../modules/fp11_05_module.c
-			g++ fp11_05_test.cpp ../../../googletest-release-1.8.1/googletest/src/gtest_main.cc gtest/gtest-all.cc -I. -lpthread fp11_05_module.o
+			gcc -c ../modules/chapter3_module.cpp
+			g++ chapter3_test.cpp ../../googletest-release-1.8.1/googletest/src/gtest_main.cc gtest/gtest-all.cc -I. -lpthread chapter3_module.o
 			./a.out
 
 gtest-gen:
-			python ../../../googletest-release-1.8.1/googletest/scripts/fuse_gtest_files.py ./
+			python ../../googletest-release-1.8.1/googletest/scripts/fuse_gtest_files.py ./
